--- a/templates/partials/navbar.html
+++ b/templates/partials/navbar.html
@@ -17,10 +17,10 @@
       <ul class="navbar-nav mx-auto navbar-center">
         <li class="nav-item dropdown dropdown-hover">
           <a class="nav-link" href="javascript:void(0)" id="homedrop" role="button" data-bs-toggle="dropdown">
-            대시보드 <div class="arrow-down"></div>
+            홈 <div class="arrow-down"></div>
           </a>
           <ul class="dropdown-menu dropdown-menu-center" aria-labelledby="homedrop">
-            <span class="dropdown-header">대시보드</span>
+            <span class="dropdown-header">홈</span>
 
             <li><a class="dropdown-item" href="{% url 'index'%}">사업소개</a></li>
             <li><a class="dropdown-item" href="{% url 'notice' %}">공지사항</a></li>
