--- a/templates/kinsdb/database.html
+++ b/templates/kinsdb/database.html
@@ -38,6 +38,7 @@
 <!-- START JOB-LIST -->
 <section class="section">
   <div class="container">
+
     <div class="row justify-content-center">
       <div class="col-lg-12">
         <div class="candidate-list-widgets mb-4">
@@ -101,7 +102,7 @@
     <div class=" row align-items-center">
                       <div class="col-lg-8">
                         <div class="mb-3 mb-lg-0">
-                          <h6 class="fs-16 mb-0"> Showing 1 – 8 of 11 results </h6>
+                          <h6 class="fs-16 mb-0"> Showing 1 – 3 of {{ docs.all | length }} results </h6>
                         </div>
                       </div>
                       <!--end col-->
@@ -139,7 +140,7 @@
                   <div class="col-lg-9">
                     <div class="candidate-list">
 
-
+                      {% for doc in docs %}
                       <!-- start card -->
                       <div class="candidate-list-box card mt-4">
                         <div class="card-body p-4">
@@ -153,14 +154,14 @@
 
                             <div class="col-lg-6">
                               <div class="candidate-list-content mt-3 mt-lg-0">
-                                <h5 class="fs-19 mb-1"><a href="{% url 'candidate-details' %}" class="primary-link">제목</a> </h5>
-                                <p class="text-muted mb-2"> 회사명 | 작성자</p>
+                                <h5 class="fs-19 mb-1"><a href="{% url 'docs-details' %}" class="primary-link">{{ doc.title }}</a> </h5>
+                                <p class="text-muted mb-2"> {{ doc.writer.company }} | {{ doc.writer }}</p>
                                 <ul class="list-inline mb-0 text-muted">
                                   <li class="list-inline-item">
-                                    <i class="mdi mdi-map-marker"></i> 등록일자: 2022.06.28
+                                    <i class="mdi mdi-map-marker"></i> 등록일자: {{ doc.regist_date|date:'Y-m-d' }}
                                   </li>
                                   <li class="list-inline-item">
-                                    <i class="uil uil-wallet"></i> 조회수: 71
+                                    <i class="uil uil-wallet"></i> 조회수: {{ doc.views }}
                                   </li>
                                 </ul>
                               </div>
@@ -169,9 +170,11 @@
 
                             <div class="col-lg-4">
                               <div class="mt-2 mt-lg-0">
-                                <span class="badge bg-soft-muted fs-14 mt-1">태그1</span>
-                                <span class="badge bg-soft-muted fs-14 mt-1">태그2</span>
-                                <span class="badge bg-soft-muted fs-14 mt-1">태그3</span>
+
+                                {% for tag in doc.tags.all %}
+                                  <span class="badge bg-soft-muted fs-14 mt-1">#{{ tag.tag_content }}</span>
+
+                                {% endfor %}
                               </div>
                             </div>
                             <!--end col-->
@@ -180,6 +183,7 @@
                         </div>
                       </div>
                       <!--end card-->
+                      {% endfor %}
 
 
 
