--- a/templates/kinsdb/database.html
+++ b/templates/kinsdb/database.html
@@ -1,5 +1,6 @@
 {% extends 'partials/base.html' %}
 {% load static %}
+{% load paginate %}
 {% block title %}Database{% endblock title %}
 {% block extra_css %}
 <!-- Choise Css -->
@@ -42,7 +43,7 @@
     <div class="row justify-content-center">
       <div class="col-lg-12">
         <div class="candidate-list-widgets mb-4">
-          <form action="#">
+          <form method="get">
             <div class="row g-2">
 
               <div class="col-lg-2">
@@ -61,7 +62,9 @@
               <div class="col-lg-8">
                 <div class="filler-job-form">
                   <i class="uil uil-search"></i>
-                  <input type="search" class="form-control filter-job-input-box" id="exampleFormControlInput1" placeholder="검색어 입력">
+
+                  <input type="search" class="form-control filter-job-input-box" id="exampleFormControlInput1" name="search" value="{{ search }} " onfocus="this.value=''" placeholder="검색어 입력">
+
                 </div>
               </div>
               <!--end col-->
@@ -71,7 +74,7 @@
               <div class="col-lg-3">
                 <div class="filler-job-form">
                   <i class="uil uil-check"></i>
-                  <input type="date" class="form-control filter-job-input-box" id="exampleFormControlInput1" placeholder="검색어 입력">
+                  <input type="date" class="form-control filter-job-input-box" id="exampleFormControlInput2" placeholder="검색어 입력">
                 </div>
               </div>
               <!--end col-->
@@ -79,13 +82,14 @@
               <div class="col-lg-3">
                 <div class="filler-job-form">
                   <i class="uil uil-check"></i>
-                  <input type="date" class="form-control filter-job-input-box" id="exampleFormControlInput1" placeholder="검색어 입력">
+                  <input type="date" class="form-control filter-job-input-box" id="exampleFormControlInput3" placeholder="검색어 입력">
                 </div>
               </div>
               <!--end col-->
               <div class="col-lg-4">
                 <div>
-                  <a href="javascript:void(0)" class="btn btn-primary"><i class="uil uil-filter"></i> Filter</a>
+                  <button type="submit" href="javascript:void(0)" class="btn btn-primary"><i class="uil uil-filter"></i> Filter</button>
+
                   <a href="javascript:void(0)" style="padding-left:10px;">Clear<i class="uil uil-multiply""></i></a>
                 </div>
               </div>
@@ -102,11 +106,11 @@
     <div class=" row align-items-center">
                       <div class="col-lg-8">
                         <div class="mb-3 mb-lg-0">
-                          <h6 class="fs-16 mb-0"> Showing 1 – 3 of {{ docs.all | length }} results </h6>
+                          <h6 class="fs-16 mb-0"> Showing  {{ page_obj.paginator.page }} – {{ page_obj.number }} of {{ page_obj.paginator.count }} results </h6>
                         </div>
                       </div>
-                      <!--end col-->
 
+                      <!--end col-->
                       <div class="col-lg-4">
                         <div class="candidate-list-widgets">
                           <div class="row">
@@ -140,7 +144,7 @@
                   <div class="col-lg-9">
                     <div class="candidate-list">
 
-                      {% for doc in docs %}
+                      {% for doc in page_obj %}
                       <!-- start card -->
                       <div class="candidate-list-box card mt-4">
                         <div class="card-body p-4">
@@ -172,7 +176,7 @@
                               <div class="mt-2 mt-lg-0">
 
                                 {% for tag in doc.tags.all %}
-                                  <span class="badge bg-soft-muted fs-14 mt-1">#{{ tag.tag_content }}</span>
+                                <span class="badge bg-soft-muted fs-14 mt-1">#{{ tag.tag_content }}</span>
 
                                 {% endfor %}
                               </div>
@@ -274,25 +278,55 @@
                 </div>
                 <!--end row-->
 
-
                 <div class="row">
                   <div class="col-lg-12 mt-5">
-                    <nav aria-label="Page navigation example">
+                    <nav>
                       <ul class="pagination job-pagination mb-0 justify-content-center">
-                        <li class="page-item disabled">
-                          <a class="page-link" href="javascript:void(0)" tabindex="-1">
+
+                        {% if page_obj.has_previous %}
+                        <li class="page-item">
+                          <a class="page-link" href="{% my_url page_obj.previous_page_number 'page' request.GET.urlencode %}" tabindex="-1">
+
                             <i class="mdi mdi-chevron-double-left fs-15"></i>
                           </a>
                         </li>
-                        <li class="page-item active"><a class="page-link" href="javascript:void(0)">1</a></li>
-                        <li class="page-item"><a class="page-link" href="javascript:void(0)">2</a></li>
-                        <li class="page-item"><a class="page-link" href="javascript:void(0)">3</a></li>
-                        <li class="page-item"><a class="page-link" href="javascript:void(0)">4</a></li>
-                        <li class="page-item">
+                        {% else %}
+                        <li class="page-item disabled">
                           <a class="page-link" href="javascript:void(0)">
+
+                            <i class="mdi mdi-chevron-double-left fs-15"></i>
+                          </a>
+                        </li>
+                        {% endif %}
+
+
+                        {% for page_number in page_obj.paginator.page_range %}
+                        {% if page_number == page_obj.number %}
+                        <li class="page-item active" aria-current="page">
+                          <a class="page-link" href="{% my_url page_number 'page' request.GET.urlencode %}">{{ page_number }}</a>
+                        </li>
+                        {% else %}
+                        <li class="page-item">
+                          <a class="page-link" href="{% my_url page_number 'page' request.GET.urlencode %}">{{ page_number }}</a>
+                        </li>
+                        {% endif %}
+                        {% endfor %}
+
+
+                        {% if page_obj.has_next %}
+                        <li class="page-item">
+                          <a class="page-link" href="{% my_url page_obj.next_page_number 'page' request.GET.urlencode %} ">
                             <i class="mdi mdi-chevron-double-right fs-15"></i>
                           </a>
                         </li>
+                        {% else %}
+                        <li class="page-item disabled">
+                          <a class="page-link" tabindex="-1" aria-disabled="true" href="#">
+                            <i class="mdi mdi-chevron-double-right fs-15"></i>
+                          </a>
+                        </li>
+                        {% endif %}
+
                       </ul>
                     </nav>
                   </div>
