--- a/templates/kinsdb/database.html
+++ b/templates/kinsdb/database.html
@@ -58,12 +58,13 @@
               </div>
               <!--end col-->
 
-
               <div class="col-lg-8">
                 <div class="filler-job-form">
                   <i class="uil uil-search"></i>
 
-                  <input type="search" class="form-control filter-job-input-box" id="exampleFormControlInput1" name="search" value="{{ search }} " onfocus="this.value=''" placeholder="검색어 입력">
+                  <input type="search" class="form-control filter-job-input-box" id="exampleFormControlInput1" name="search" value="{{ search }} " onfocus="this.value=''" placeholder="검색어 입력" onblur="this.value=this.value.trim();">
+                  <input type="hidden" class="form-control filter-job-input-box" id="tagInput" name="search" value="{{ search }} " onfocus="this.value=''" onblur="this.value=this.value.trim();">
+
                   <input type="hidden" id="fieldFormControlInput" name="field" value="title" onfocus="this.value=''" placeholder="태그 입력">
                 </div>
               </div>
@@ -107,8 +108,9 @@
                       <div class="col-lg-8">
                         <div class="mb-3 mb-lg-0">
                           <h6 class="fs-16 mb-0" style="font-weight:200; color: gray"> Showing
-                            <b>{{ page_obj.paginator.count }} results</b> {{ field }} {{ search }}
-                            <!-- {% if '{{ field }}'='tag' %} # {% else %} "" {% endif %} -->
+                            <b>{{ page_obj.paginator.count }} results</b>
+
+                            {% if field == "tag" %} for #{{ search }} {% elif field == "title" and search %} for "{{ search }}" {% else %} - {% endif %}
                           </h6>
                         </div>
                       </div>
@@ -161,7 +163,7 @@
 
                             <div class="col-lg-6">
                               <div class="candidate-list-content mt-3 mt-lg-0">
-                                <h5 class="fs-19 mb-1"><a href="{% url 'docs-details' %}" class="primary-link">{{ doc.title }}</a> </h5>
+                                <h5 class="fs-19 mb-1"><a href="{% url 'docs-details' pk=doc.id %}" class="primary-link">{{ doc.title }}</a> </h5>
                                 <p class="text-muted mb-2"> {{ doc.writer.company }} | {{ doc.writer }}</p>
                                 <ul class="list-inline mb-0 text-muted">
                                   <li class="list-inline-item">
