--- a/templates/kinsdb/UNIST_database.html
+++ b/templates/kinsdb/UNIST_database.html
@@ -14,7 +14,7 @@
     <div class="row justify-content-center">
       <div class="col-md-6">
         <div class="text-center text-white">
-          <h2 class="mb-4">Database</h2>
+          <h2 class="mb-4">UNIST</h2>
         </div>
       </div>
       <!--end col-->
@@ -164,7 +164,7 @@
                             <div class="col-lg-6">
                               <div class="candidate-list-content mt-3 mt-lg-0">
                                 <h5 class="fs-19 mb-1"><a href="{% url 'docs-details' pk=doc.id %}" class="primary-link">{{ doc.title }}</a> </h5>
-                                <p class="text-muted mb-2"> {{ doc.writer.company }} | {{ doc.writer }}</p>
+                                <p class="text-muted mb-2"> {{ doc.writer.company }} | {{ doc.writer.dept }}</p>
                                 <ul class="list-inline mb-0 text-muted">
                                   <li class="list-inline-item">
                                     <i class="mdi mdi-map-marker"></i> 등록일자: {{ doc.regist_date|date:'Y-m-d' }}
