--- a/templates/partials/navbar.html
+++ b/templates/partials/navbar.html
@@ -151,7 +151,7 @@
       </li>
       <li class="list-inline-item dropdown">
         <a href="javascript:void(0)" class="header-item" id="userdropdown" data-bs-toggle="dropdown" aria-expanded="false">
-          <img src="{% static 'images/profile.jpg' %}" alt="mdo" width="35" height="35" class="rounded-circle me-1"> <span class="d-none d-md-inline-block fw-medium">Hi, 홍길동님!</span>
+          <img src="{% static 'images/profile.jpg' %}" alt="mdo" width="35" height="35" class="rounded-circle me-1"> <span class="d-none d-md-inline-block fw-medium">Hi, {{ user }}!</span>
         </a>
         <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="userdropdown">
           <span class="dropdown-header">내 프로필</span>
