--- a/templates/partials/footer.html
+++ b/templates/partials/footer.html
@@ -69,7 +69,7 @@
                             </div><!--end col-->
 
 
-                            <div class="col-lg-2"><a href="{% url 'database' %}"
+                            <div class="col-lg-2"><a href="{% url 'database-index' %}"
                                 class="text-reset text-decoration-underline">Show Database</a></div>
                         </div><!--end row-->
                     </div><!--end container-->
