docs document model

--- a/templates/kinsdb/BRNC_database.html
+++ b/templates/kinsdb/BRNC_database.html
@@ -112,12 +112,12 @@
                           <h6 class="fs-16 mb-0" style="font-weight:200; color: gray"> Showing
                             <b>{{ page_obj.paginator.count }} results</b>
 
-                            {% if field == "tag" %} for #{{ search }} {% elif field == "title" and search %} for "{{ search }}" {% else %} - {% endif %}
+                            {% if field == "tag" %} for #{{ tag }} {% elif field == "title" and search %} for "{{ search }}" {% else %} - {% endif %}
                           </h6>
                         </div>
                       </div>
-
                       <!--end col-->
+
                       <div class="col-lg-4">
                         <div class="candidate-list-widgets">
                           <div class="row">
@@ -145,6 +145,7 @@
                         <!--end candidate-list-widgets-->
                       </div>
                       <!--end col-->
+                      
                 </div>
                 <!--end row-->
                 <div class="row">
