--- a/templates/kinsdb/docs-detail.html
+++ b/templates/kinsdb/docs-detail.html
@@ -61,7 +61,7 @@
 
 
           <div class="candidate-profile-overview  card-body border-top p-4">
-            <h6 class="fs-17 fw-semibold mb-3">{{ doc.title }}</h6>
+            <h6 class="fs-17 fw-semibold mb-3">지층처분장의 고준의방폐물 처분</h6>
             <ul class="list-unstyled mb-0">
 
               <li>
@@ -72,12 +72,11 @@
                   </div>
                 </div>
               </li>
-
               <li>
                 <div class="d-flex">
-                  <label class="text-dark">발간/개정일</label>
+                  <label class="text-dark">기관/국가</label>
                   <div>
-                    <p class="text-muted mb-0">{{ doc.regist_date|date:'Y/m/d' }}</p>
+                    <p class="text-muted mb-0">미국</p>
                   </div>
                 </div>
               </li>
@@ -150,6 +149,7 @@
                             </div>
                         </div>
                     </li>
+
                     <li>
                         <div class="profile-document-list d-flex align-items-center mt-4 ">
                             <div class="icon flex-shrink-0">
@@ -164,16 +164,13 @@
                             </div>
                         </div>
                     </li>
+                    
                 </ul>
             </div>
             <div class="candidate-education-details mt-4 pt-3">
-              <h6 class="fs-17 fw-bold mb-0">세부 내용</h6>
+              <h6 class="fs-17 fw-bold mb-0"> [60.1] {{ doc.title }}</h6>
               <div class="candidate-education-content mt-4 d-flex">
-                <div class="circle flex-shrink-0 bg-soft-primary" style="font-size:12px;"> 06.27 </div>
-                <div class="ms-4">
-                  <h6 class="fs-16 mb-1">필드 수정</h6>
                   <p class="text-muted">{{ doc.content }}</p>
-                </div>
               </div>
             </div>
             <!--end candidate-education-details-->
