--- a/templates/kinsdb/database-index.html
+++ b/templates/kinsdb/database-index.html
@@ -1,6 +1,6 @@
 {% extends 'partials/base.html' %}
 {% load static %}
-{% block title %}Company List{% endblock title %}
+{% block title %}Database{% endblock title %}
 {% block extra_css %}
 <!-- Choise Css -->
 <link rel="stylesheet" href="{% static 'libs/choices.js/public/assets/styles/choices.min.css' %}">
