--- a/templates/cloud/candidates-company/company-list.html
+++ b/templates/cloud/candidates-company/company-list.html
@@ -1,6 +1,6 @@
 {% extends 'partials/base.html' %}
 {% load static %}
-{% block title %}Company List{% endblock title %}
+{% block title %}Company dd{% endblock title %}
 {% block extra_css %}
 <!-- Choise Css -->
 <link rel="stylesheet" href="{% static 'libs/choices.js/public/assets/styles/choices.min.css' %}">
