--- a/templates/partials/footer.html
+++ b/templates/partials/footer.html
@@ -69,8 +69,8 @@
                             </div><!--end col-->
 
 
-                            <div class="col-lg-2"><a href="{% url 'database-index' %}"
-                                class="text-reset text-decoration-underline">Show Database</a></div>
+                            <div class="col-lg-2"><a href="{% url 'index' %}"
+                                class="text-reset text-decoration-underline">File Cloud Service</a></div>
                         </div><!--end row-->
                     </div><!--end container-->
                 </div>
